# med-paper-assistant

./: .copilot-mode.json  .foam.json  .gitignore  .gitmodules  .mdpaper-state.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  IMPROVEMENT_SUGGESTIONS.md  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  activeContext.md  concept.md  mkdocs.yml  progress.md  projectContext.md  pyproject.toml  search_strategy.json  systemPatterns.md  techContext.md  test_format_real.py  tool-surface-authority.json
.agent/workflows/: mdpaper_apply_format.md  mdpaper_clarify.md  mdpaper_concept.md  mdpaper_data_analysis.md  mdpaper_draft.md  mdpaper_strategy.md
.audit/: pending-evolutions.yaml  tool-telemetry.yaml
.github/: PULL_REQUEST_TEMPLATE.md  architect.chatmode.md  ask.chatmode.md  code.chatmode.md  copilot-instructions.md  debug.chatmode.md  dependabot.yml  release.yml  zotero-research-workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: concept-challenger.agent.md  domain-reviewer.agent.md  literature-searcher.agent.md  meta-learner.agent.md  methodology-reviewer.agent.md  paper-reviewer.agent.md  reference-analyzer.agent.md  review-orchestrator.agent.md  statistics-reviewer.agent.md
.github/bylaws/: ddd-architecture.md  git-workflow.md  memory-bank.md  python-environment.md
.github/hooks/: mode-guard.json
.github/prompts/: _capability-index.md  code-quality.prompt.md  mdpaper.analysis.prompt.md  mdpaper.audit.prompt.md  mdpaper.clarify.prompt.md  mdpaper.concept.prompt.md  mdpaper.draft.prompt.md  mdpaper.format.prompt.md  mdpaper.help.prompt.md  mdpaper.literature-survey.prompt.md  mdpaper.project.prompt.md  mdpaper.search.prompt.md  mdpaper.strategy.prompt.md  mdpaper.write-paper.prompt.md  release-prep.prompt.md
.github/workflows/: ci.yml  evolution-health.yml  pages.yml  release.yml
.memory/: .agent_constitution.md  activeContext.md  progress.md  systemPatterns.md
.memory/ideas/: drawio_integration.md  mcp_drawio_realtime_integration.md
.memory/sessions/: readme_badges.md  readme_major_update.md
.skills/: ARCHITECTURE.md  INTEGRATION.md  README.md  _template.md
.skills/research/: concept_development.md  literature_review.md  parallel_search.md
dashboard/: README.md  package-lock.json  package.json
docs/: auto-paper-guide.md  index.html  index.md  site-content.js  site-manifest.yaml  site.css  site.js
docs/design/: adversarial-verification-harness.md  ai-writing-intelligence.md  article-type-aware-harness.md  artifact-centric-architecture.md  autopaper-governance-review-stack.md  citation-tools-architecture.md  external-project-benchmark.md  missing-mcp-tools.md  multi-stage-review-architecture.md  production-academic-writing-harness.md  python312-migration-plan.md  tool-consolidation-plan.md
docs/harness/: academic-writing-workflow.md  output-profiles.md  platform-compatibility.md
docs/how-to/: llm-wiki.md
docs/reference/: foam.md
docs/stylesheets/: extra.css
docs/wiki/: development-and-release.md  evidence-and-citations.md  harness-architecture.md  mcp-ecosystem.md  output-landscape.md  quality-and-audit.md  quickstart.md  repo-map.md  research-pipeline.md  visual-atlas.md  workspace-and-memory.md
integrations/: README.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
scripts/: build_docs_site.py  bump-version.sh  check-doc-updates.py  check-evolution-health.py  check_consistency.py  check_tool_surface_authority.py  copilot_hook_guard.py  generate_journal_profiles.py  greedy_mcp_tool_smoke.py  inspect_template.py  list_styles.py  migrate_mcp_json.py  open-dashboard.ps1  real_pubmed_search.py  release.sh  setup-integrations.ps1  setup-integrations.sh  setup.bat  setup.ps1  setup.sh  smoke_test.py  start-drawio.ps1  start-drawio.sh  sync_repo_counts.py  temp_search.py  test_save_ref.py  update_foam_titles.py  validate_novelty_search.py  verify_mcp_server_boot.py  view_session.py
scripts/hooks/: paper_precommit.py
src/med_paper_assistant/: __init__.py
templates/: concept-review-report.template.yaml  journal-profile.template.yaml
templates/csl/: vancouver-superscript.csl  vancouver.csl
templates/journal-profiles/: README.md  _index.yaml  aanda.yaml  acta-anaesthesiol-scand.yaml  anaesthesia-intensive-care.yaml  anaesthesia.yaml  anesthesiology.yaml  bja-br.yaml  bja.yaml  cja.yaml  (+12 more)
test_data/: study_data.csv
test_drafts/: test_intro.md
test_drafts_insert/: test_insert.md
test_export/: draft.md  output.docx  template.docx
test_foam_refs/: tang2023_38049909.md  test_draft.md
test_formatter/: custom_template.docx  draft.md  output_2.docx
tests/: conftest.py  test_advanced_search.py  test_adversarial_hooks.py  test_agent_harness_contract.py  test_analysis.py  test_analysis_facade.py  test_analysis_workflow.py  test_architecture_boundaries.py  test_asset_review_flow.py  test_audit_hooks.py  test_author.py  test_bundled_python_mirror.py  test_ci_workflows.py  test_citation_converter.py  test_citation_styles.py  test_clarify_workflow.py  test_config_paths.py  test_constraint_action_tool.py  test_constraint_ledger.py  test_copilot_hook_guard.py  test_csl_pandoc.py  test_diagram_path_guard.py  test_docs_site.py  test_doi_validator.py  test_domain_constraint_engine.py  test_draft_facade.py  test_drafter.py  test_e2e_pipeline_lifecycle.py  test_editing_tools.py  test_embedded_hooks.py  test_entrez_enhancements.py  test_evolution_verifier.py  test_exemplar_usage_store.py  test_export.py  test_export_pipeline.py  test_external_mcp_contract_smoke.py  test_facade_first_guidance.py  test_figure_embedding.py  test_file_storage_path_guard.py  test_foam_settings.py  (+58 more)
vscode-extension/: .copilot-mode.json  .eslintrc.cjs  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  bundle-manifest.json  copilot-instructions.md  eslint.config.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+517 files in other folders)
