[project]
name = "med-paper-assistant"
version = "0.1.0"
description = "A medical paper writing assistant using MCP support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pydantic",
    "biopython",
    "pandas",
    "matplotlib",
    "scipy",
    "seaborn",
    "tabulate",
    "python-docx",
    "requests",
    "pypdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/med_paper_assistant"]

